# kvs

./: .gitignore  Cargo.toml  README.md
src/: client.rs  error.rs  kv.rs  lib.rs  protocol.rs  server.rs
src/engines/: kvs.rs
tests/: cli.rs  tests.rs
